cli unit tests passed