@@ -49,7 +49,7 @@ public class Main {
                 break;
             }
             
-            var navState = states.getLast();
+            var navState = states.get(states.size() - 1);
 
             System.out.println();
             
@@ -79,7 +79,7 @@ public class Main {
             if (navResponse instanceof NavResponse.Exit) {
                 break;
             } else if (navResponse instanceof NavResponse.Back) {
-                states.removeLast();
+                states.remove(states.size() - 1);
             } else if (navResponse instanceof NavResponse.Push) {
                 var newState = ((NavResponse.Push)navResponse).getNewState();
                 states.add(newState);
